--story=1001457 --user=韦吴杰 管理员 https://www.tapd.cn/46092103/s/1001164

--- a/good-module/src/main/resources/application.yml
+++ b/good-module/src/main/resources/application.yml
@@ -23,62 +23,62 @@ spring:
     #schema: oomall_goods.sql
 
     druid:
-      #³õÊ¼»¯Ê±½¨Á¢ÎïÀíÁ¬½ÓµÄ¸öÊý
+      #ï¿½ï¿½Ê¼ï¿½ï¿½Ê±ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ÓµÄ¸ï¿½ï¿½ï¿½
       initial-size: 3
-      #×îÐ¡Á¬½Ó³ØÊýÁ¿
+      #ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½
       min-idle: 3
-      #×î´óÁ¬½Ó³ØÊýÁ¿
+      #ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½
       max-active: 100
-      #»ñÈ¡Á¬½ÓÊ±×î´óµÈ´ýÊ±¼ä
+      #ï¿½ï¿½È¡ï¿½ï¿½ï¿½ï¿½Ê±ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ï¿½
       max-wait: 60000
       filter:
         stat:
-          #ÊÇ·ñ¿ªÆôÂýsql²éÑ¯¼à¿Ø
+          #ï¿½Ç·ï¿½ï¿½ï¿½ï¿½ï¿½sqlï¿½ï¿½Ñ¯ï¿½ï¿½ï¿½
           log-slow-sql: true
-          #ÂýSQLÖ´ÐÐÊ±¼ä
+          #ï¿½ï¿½SQLÖ´ï¿½ï¿½Ê±ï¿½ï¿½
           slow-sql-millis: 100
       validation-query: select 1
     sql-script-encoding: UTF-8
   redis:
-    # RedisÊý¾Ý¿âË÷Òý£¨Ä¬ÈÏÎª0£©
+    # Redisï¿½ï¿½ï¿½Ý¿ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ä¬ï¿½ï¿½Îª0ï¿½ï¿½
     database: 0
-    #Á¬½Ó³Ø×î´óÁ¬½ÓÊý£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
+    #ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
     lettuce:
       pool:
         max-active: 100
-        # Á¬½Ó³ØÖÐµÄ×î´ó¿ÕÏÐÁ¬½Ó
+        # ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
         max-idle: 100
-        # Á¬½Ó³ØÖÐµÄ×îÐ¡¿ÕÏÐÁ¬½Ó
+        # ï¿½ï¿½ï¿½Ó³ï¿½ï¿½Ðµï¿½ï¿½ï¿½Ð¡ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
         min-idle: 0
-        #Á¬½Ó³Ø×î´ó×èÈûµÈ´ýÊ±¼ä£¨Ê¹ÓÃ¸ºÖµ±íÊ¾Ã»ÓÐÏÞÖÆ£©
+        #ï¿½ï¿½ï¿½Ó³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½È´ï¿½Ê±ï¿½ä£¨Ê¹ï¿½Ã¸ï¿½Öµï¿½ï¿½Ê¾Ã»ï¿½ï¿½ï¿½ï¿½ï¿½Æ£ï¿½
         max-wait: -1
-    # Á¬½Ó³¬Ê±Ê±¼ä£¨ºÁÃë£©
+    # ï¿½ï¿½ï¿½Ó³ï¿½Ê±Ê±ï¿½ä£¨ï¿½ï¿½ï¿½ë£©
     timeout: 5000
 
 mybatis:
-  #po¶ÔÏóµÄ°ü
+  #poï¿½ï¿½ï¿½ï¿½Ä°ï¿½
   type-aliases-package: com.ooad.good.model
-  #mapper.xmlËùÔÚµÄÎ»ÖÃ
+  #mapper.xmlï¿½ï¿½ï¿½Úµï¿½Î»ï¿½ï¿½
   mapper-locations: classpath*:com.ooad.good.mapper/*.xml
-  #×Ô¶¯½«SQLÖÐ²é³öÀ´µÄ´øÏÂ»®ÏßµÄ×Ö¶Î£¬×ª»»ÎªÍÕ·å±êÖ¾£¬ÔÙÈ¥Æ¥ÅäÀàÖÐµÄÊôÐÔ
+  #ï¿½Ô¶ï¿½ï¿½ï¿½SQLï¿½Ð²ï¿½ï¿½ï¿½ï¿½ï¿½Ä´ï¿½ï¿½Â»ï¿½ï¿½ßµï¿½ï¿½Ö¶Î£ï¿½×ªï¿½ï¿½Îªï¿½Õ·ï¿½ï¿½Ö¾ï¿½ï¿½ï¿½ï¿½È¥Æ¥ï¿½ï¿½ï¿½ï¿½ï¿½Ðµï¿½ï¿½ï¿½ï¿½ï¿½
   configuration:
-    #Êä³ö²úÉúµÄSQL
+    #ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½SQL
     #log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
     map-underscore-to-camel-case: true
 
 prvilegeservice:
-  #ÊÇ·ñ¶ÔÊý¾Ý¿âÖÐµÄÎ´³õÊ¼»¯µÄÊý¾Ý³õÊ¼»¯
+  #ï¿½Ç·ï¿½ï¿½ï¿½ï¿½ï¿½Ý¿ï¿½ï¿½Ðµï¿½Î´ï¿½ï¿½Ê¼ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Ý³ï¿½Ê¼ï¿½ï¿½
   initialization: false
-  #Ëæ»úÑ©±ÀÊ±¼ä£¨Ãë£©
+  #ï¿½ï¿½ï¿½Ñ©ï¿½ï¿½Ê±ï¿½ä£¨ï¿½ë£©
   randomtime: 300
   user:
-    # userµÄÈ¨ÏÞ×ÖÔÚRedisÖÐÊ§Ð§ÃëÊý
+    # userï¿½ï¿½È¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Redisï¿½ï¿½Ê§Ð§ï¿½ï¿½ï¿½ï¿½
     expiretime: 600
   role:
-    # roleµÄÈ¨ÏÞ×ÖÔÚRedisÖÐÊ§Ð§ÃëÊý
+    # roleï¿½ï¿½È¨ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½Redisï¿½ï¿½Ê§Ð§ï¿½ï¿½ï¿½ï¿½
     expiretime: 600
 
-#pagehelper·ÖÒ³²å¼þÅäÖÃ
+#pagehelperï¿½ï¿½Ò³ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½ï¿½
 pagehelper:
   helper-dialect: mysql
 
