--- a/good-module/pom.xml
+++ b/good-module/pom.xml
@@ -63,6 +63,24 @@
 			<artifactId>springfox-core</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.dubbo</groupId>
+			<artifactId>dubbo-common</artifactId>
+			<version>2.7.8</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>cn.edu.xmu</groupId>
+			<artifactId>order-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>cn.edu.xmu</groupId>
+			<artifactId>other-client</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+			<scope>compile</scope>
+		</dependency>
 
 
 	</dependencies>
