--story=1001463 --user=韦吴杰 普通用户 https://www.tapd.cn/46092103/s/1002346

--- a/good-module/pom.xml
+++ b/good-module/pom.xml
@@ -81,9 +81,15 @@
 			<version>0.0.1-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
+        <dependency>
+            <groupId>cn.edu.xmu</groupId>
+            <artifactId>goods-client</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
